CCN-137 fixing horizontal scroll bug

--- a/src/app/styles/theme/cups-buyer/_cups-sidebar.less
+++ b/src/app/styles/theme/cups-buyer/_cups-sidebar.less
@@ -40,6 +40,7 @@ body {
         -moz-transition: all 0.5s ease;
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease;
+        overflow-x: hidden;
     }
     &__content {
         width: 100%;
